# arc-gnu-toolchain

./: .gitignore  .gitmodules  .travis.yml  DATESTAMP  Makefile.in  README.md  configure  configure.ac
.github/scripts/: create-release.py
.github/workflows/: build-release.yml  build-toolchains.yml  ci.yml
dejagnu/: site.exp
dejagnu/baseboards/: arc-sim.exp
docker/: Dockerfile
linux-headers/include/asm/: bitsperlong.h  elf.h  page.h  ptrace.h  unistd.h
linux-headers/include/linux/: elf-em.h
scripts/: buildroot_defconfig  link_sources_to_directory.sh  qemu-binfmt-conf.sh  testsuite-filter  turnon_developer_mode.sh
scripts/testing/: config.json  test.rb
scripts/wrapper/nsim/: arc-elf32-run  arc32-elf-run  arc64-elf-run
scripts/wrapper/qemu/: arc-linux-gnu-run  arc32-elf-run  arc64-elf-run  arc64-linux-gnu-run
test/: run.sh  setup.sh  site.exp
test-qemu/: Makefile.in  configure  configure.ac  setup.sh  site.exp
test-qemu-linux/: site.exp
test-qemu/qemu/: README.md
test-qemu/qemu/testsuite/lib/: qemu-lib.exp  qemu.exp
test-qemu/qemu/testsuite/qemu.basic/: basic.exp  check_addf.S  check_bi.S  check_big_tb.S  check_bih.S  check_bta.S  check_dmach_arc64.S  check_dmach_hs.S  check_dmachu_generic.S  check_dmacwh_arc64.S  check_dmacwh_hs.S  check_dmpyh_arc64.S  check_dmpyh_hs.S  check_dmpywh_arc64.S  check_dmpywh_hs.S  check_enter_leave.S  check_excp.S  check_excp_jumpdl_mmu.S  check_interrupt_before_delayslot_arc64.S  check_interrupt_before_delayslot_generic.S  check_lddl.S  check_ldstx.S  check_llock_scond_arc64.S  check_llock_scond_generic.S  check_llockd_scondd_generic.S  check_llockl_scondl_arc64.S  check_lp.S  check_lp02.S  check_lp03.S  check_lp04.S  check_lp05.S  check_lp06.S  check_mac.S  check_macd_arc64.S  check_macdu_arc64.S  check_mmuv48_00_arc64.S  check_mmuv48_01_arc64.S  check_mmuv48_02_arc64.S  check_mmuv48_03_arc64.S  check_mmuv48_04_arc64.S  (+62 more)
test-qemu/qemu/testsuite/qemu.basic.arc64/: check_BCRs.S  check_add.S  check_addx.S  check_andx.S  check_aslx.S  check_asrx.S  check_atld.S  check_basic1.S  check_basic2.S  check_beq.S  check_beqx.S  check_bi.S  check_bih.S  check_bnex.S  check_breqx.S  check_brgex.S  check_brhsx.S  check_brlox.S  check_brltx.S  check_brnex.S  check_bta.S  check_carry.S  check_dmach.S  check_dmacwh.S  check_dmpyh.S  check_dmpywh.S  check_excp.S  check_excp_1.c  check_excp_jumpdl_mmu.S  check_excp_mmu.S  check_flags.S  check_interrupt_before_delayslot.S  check_ldaw_mmu.S  check_lddl.S  check_llock_scond.S  check_llockl_scondl.S  check_lsrx.S  check_mac.S  check_macd.S  check_macdu.S  (+66 more)
test-qemu/qemu/testsuite/qemu.basic.gen/: basic-generic.exp  check_BCRs.S  check_add.S  check_addx.S  check_andx.S  check_aslx.S  check_asrx.S  check_basic1.S  check_basic2.S  check_beq.S  check_beqx.S  check_bi.S  check_big_tb.S  check_bih.S  check_bnex.S  check_breqx.S  check_brgex.S  check_brhsx.S  check_brlox.S  check_brltx.S  check_brnex.S  check_bta.S  check_carry.S  check_dmachu.S  check_excp.S  check_excp_1.c  check_flags.S  check_interrupt_before_delayslot.S  check_llock_scond.S  check_llockd_scondd.S  check_lsrx.S  check_mac.S  check_mmu.S  check_mpu.S  check_mpyd.S  check_mpyf.S  check_mpyuf.S  check_mpyw.S  check_norm.S  check_orx.S  (+32 more)
test-qemu/qemu/testsuite/qemu.basic.hs/: basic-hs.exp  check_dmach.S  check_dmacwh.S  check_dmpyh.S  check_dmpywh.S  check_enter_leave.S  check_excp_jumpdl_mmu.S  check_excp_mmu.S  check_ldaw_mmu.S  check_ldstx.S  check_lp.S  check_lp02.S  check_lp03.S  check_lp04.S  check_lp05.S  check_lp06.S  check_manip_10_mmu.S  check_manip_4_mmu.S  check_manip_5_mmu.S  check_manip_mmu.S  check_prefetch.S  check_qmach.S  check_qmpyh.S  check_swirq1.S  check_vmpy2h.S  ivt.inc  test_macros.h
test-qemu/qemu/testsuite/qemu.basic.hs5x/: check_atld.S
test/allowlist/: README.md
test/allowlist/binutils/: binutils.json
test/allowlist/gcc/archs/: gcc.json
test/allowlist/gcc/hs6x/: gcc.json
test/allowlist/qemu/archs/: qemu.json
